--- a/src/component/Html5QrcodePlugin/Html5QrcodePlugin.css
+++ b/src/component/Html5QrcodePlugin/Html5QrcodePlugin.css
@@ -45,6 +45,6 @@ img[alt~="Info"] {
     display: none
 }
 
-#html5qr-code-full-region__dashboard_section_csr span:not(:last-of-type){
+#html5qr-code-full-region__dashboard_section_csr span>>>button:not(:last-of-type){
     display: none
 }
